test_suite/alan-2022-examples/failing/006510_mutation.alan
source S begin leave 18 or and 3 end
